--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,13 +53,13 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="{{url_for('home')}}">Home</a>
+                                <a href="{{url_for('home.home_home')}}">Home</a>
                             </li>
                             <li>
-                                <a href="{{url_for('methodology')}}">Methodology</a>
+                                <a href="{{url_for('methodology.methodology_home')}}">Methodology</a>
                             </li>
                             <li>
-                                <a href="{{url_for('carbon_app')}}">Carbon App</a>
+                                <a href="{{url_for('carbon_app.carbon_app_home')}}">Carbon App</a>
                             </li>
                         </ul>
                     </nav>
