--- a/capp/templates/methodology.html
+++ b/capp/templates/methodology.html
@@ -9,6 +9,9 @@
           <h1 style="font-size: 55px;"><span class="text-logo">Methodology</span></h1>
           <p style="text-align: left;">This is the webpage in our website where we present our methodology. 
           </p>
+          <a href="{{url_for('carbon_app.carbon_app_home')}}">
+            <button type="button" class="btn btn-primary">Carbon App</button>
+          </a>
         </div>
 
       
@@ -31,7 +34,7 @@
         <h1 style="font-size: 55px;"><span class="text-logo">Material</span></h1>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-          Paper with research and studies: 
+          Paper 
         </button>
      </div>
 
