--- a/capp/templates/layout.html
+++ b/capp/templates/layout.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='methodology.css')}}">
         <link rel="stylesheet" type="text/css" href="{{url_for ('static', filename='carbon_app.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{url_for ('static', filename='users.css')}}">
 
         <!-- To activate Media Querys in devices -->
         <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1">
